hphp/hack/test/typecheck/xhp/xhp_constructor_check.php.exp
File "xhp_constructor_check.php", line 17, characters 11-54:
Some elements in this collection are incompatible (Typing[4110])
  File "xhp_constructor_check.php", line 8, characters 19-21:
  Expected `int`
  File "xhp_constructor_check.php", line 14, characters 29-34:
  But got `string`
File "xhp_constructor_check.php", line 17, characters 11-54:
The values of this `dict` are incompatible (Typing[4110])
  File "xhp_constructor_check.php", line 7, characters 26-28:
  Expected `int`
  File "xhp_constructor_check.php", line 14, characters 13-18:
  But got `string`
